lustre/osd-ldiskfs/osd_handler.c
@@ -1707,8 +1707,6 @@ static void osd_trans_commit_cb(struct super_block *sb,
 	if (error)
 		CERROR("transaction @0x%p commit error: %d\n", th, error);
 
-	dt_txn_hook_commit(th);
-
 	/* call per-transaction callbacks if any */
 	list_for_each_entry_safe(dcb, tmp, &oh->ot_commit_dcb_list,
 				 dcb_linkage) {
